lib/stratiform/res/test/stratiform/corpus/neg/e308-schema-duplicate-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name first-name
name second-name

document
  field foo string
